--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -186,4 +186,14 @@
         <item>Failed</item>
         <item>Succeeded</item>
     </string-array>
+
+    <string-array name="autoScoring">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
 </resources>
