--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -229,11 +229,10 @@
         android:id="@+id/matchNumber"
         android:layout_width="@dimen/text_box_width"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#00000000"
         android:entries="@array/matches"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/teamNumber"
         app:layout_constraintTop_toBottomOf="@+id/teamNumber" />
 
     <Button
@@ -334,8 +333,8 @@
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:visibility="visible"
+        app:layout_constraintStart_toStartOf="@+id/matchNumber"
         app:layout_constraintTop_toBottomOf="@+id/matchNumber"
-        tools:layout_editor_absoluteX="8dp"
         tools:visibility="visible" />
 
     <Button
