--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -172,19 +172,14 @@
         <item>Match 99</item>
     </string-array>
 
-    <string-array name="climbLevel">
-        <item>Select level</item>
-        <item>Level 1</item>
-        <item>Level 2</item>
-        <item>Level 3</item>
-        <item>Level 4</item>
-    </string-array>
-
-    <string-array name="climbAttempt">
+    <string-array name="climb">
         <item>Select</item>
         <item>Did not attempt</item>
-        <item>Failed</item>
-        <item>Succeeded</item>
+        <item>Failed attempt</item>
+        <item>Success - Lvl 1</item>
+        <item>Success - Lvl 2</item>
+        <item>Success - Lvl 3</item>
+        <item>Success - Lvl 4</item>
     </string-array>
 
     <string-array name="autoScoring">
