Added traversal time GUI and functionality, fixed and modified data validation
Since this commit contains fixes and modifications to data validation, a core piece of the app, it is pushed to the GUI branch. Nathan please review this and get back to me.

--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -573,7 +573,7 @@
         tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
     <Spinner
-        android:id="@+id/climbAttDropdown2"
+        android:id="@+id/climbTimeDropdown"
         style="@android:style/Widget.Material.Light.Spinner"
         android:layout_width="300dp"
         android:layout_height="22dp"
