--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:scaleY="1"
     android:translationY="-25px"
     android:visibility="visible"
-    tools:context="com.ibxcodecat.frc_scouting.LaunchActivity"
+    tools:context="com.ibxcodecat.frc_scouting.Activity.LaunchActivity"
     tools:visibility="visible">
 
     <Button
