--- a/app/src/main/res/layout/activity_submitted.xml
+++ b/app/src/main/res/layout/activity_submitted.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ibxcodecat.frc_scouting.SubmittedActivity">
+    tools:context="com.ibxcodecat.frc_scouting.Activity.SubmittedActivity">
 
     <Button
         android:id="@+id/next"
